--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   margin-top: 70px;
 }
 
-/* Left side - Hero */
+/* Left Container - Books CHANGE TO GRID IN FINAL DESIGN */
 .left-container {
   flex: 1;
   background: rgb(34, 193, 195);
@@ -77,31 +77,10 @@ body {
   );
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 40px;
   color: var(--text-light);
   position: relative;
-}
-
-.title-box h1 {
-  font-size: 3.5rem;
-  margin-bottom: 20px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  line-height: 1.2;
-}
-
-.sub-title-box p {
-  font-size: 1.5rem;
-  max-width: 80%;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-
-.festival-logo img {
-  position: relative;
-  width: 800px;
-  height: auto;
-  z-index: 1;
-  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
 }
 
 /* Right side - Form */
